# Zeus

./: .env.example  .gitattributes  .gitignore  AGENTS.md  README.md  ZEUS_BUILD_PLAN.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  zeus-sandbox.wsb
.githooks/: pre-commit
.github/: release-drafter.yml
.github/workflows/: contract.yml  package.yml  (+2 more)
docs/: agent-loop-and-browser-testing.md  agent-runtime-service.md  execution-capabilities.md  harness-adaptive-loops-implementation.md  pi-rust-engine-review-and-follow-up.md  review-mode-and-agent-loop-audit.md
scripts/: browser-smoke.mjs  build-ddgs-sidecar.ps1  build-ddgs-sidecar.sh  check-tauri-capabilities.sh  ddgs_sidecar_entry.py  dev-hot.sh  launch-dev.ps1  start-searxng-docker.sh  test-count.mjs  vite-hot.sh  zeus-browser-driver.mjs  zeus-browser-driver.test.mjs
src/: App.test.tsx  App.tsx  WorkingFolderButton.tsx  WorkspaceDirectoryControl.tsx  agentRuntimeDeepLoop.test.ts  agentRuntimeDeepLoop.ts  main.tsx  styles.css  zeusUiRuntimeFixes.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/examples/: skills_smoke.rs
src-tauri/icons/: icon.icns
src-tauri/src/: agent_runtime.rs  agent_runtime_commands.rs  code_intelligence.rs  credentials.rs  github_workflow.rs  lib.rs  main.rs  memory.rs  patch.rs  persistence.rs  policy.rs  validation.rs  web_search.rs  workspace.rs
src-tauri/src/engine/: mod.rs
src-tauri/src/providers/: anthropic.rs  minimax.rs  mod.rs  openai.rs
src-tauri/tests/: agent_runtime.rs  bridge_integration.rs
(+116 files in other folders)
