[package]
name = "zeus"
version = "0.1.0"
description = "Local-first coding agent with visible harness evolution"
authors = ["benclawbot"]
edition = "2021"

[lib]
name = "zeus_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
thiserror = "2"
dotenvy = "0.15"
rusqlite = { version = "0.32", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1"
parking_lot = "0.12"
